--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                 <div class="avatar-frame">
                     <div class="avatar-inner">
                         <!-- REPLACE WITH YOUR PROFILE PICTURE -->
-                        <img class="profile-img" src="https://images.unsplash.com/photo-1560250097-0b93528c311a?w=300&h=300&fit=crop&crop=face&auto=format&q=80" alt="profile">
+                        <img class="profile-img" src="mike.jpeg">
                     </div>
                 </div>
                 <div class="avatar-caption">WEB ARCHITECT</div>
@@ -569,4 +569,5 @@
         });
     </script>
 </body>
+
 </html>
