--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                     <div class="screenshot">
                         <!-- YOUR REAL WEBSITE IMAGE -->
                         <img class="website-image" 
-                             src="https://images.unsplash.com/photo-1581291518633-83b4ebd1d83e?w=800&h=500&fit=crop&auto=format&q=80" 
+                             src="Screenshot 2026-02-12 184408.png" 
                              alt="Maison Éclat website">
                     </div>
                 </div>
@@ -571,3 +571,4 @@
 </body>
 
 </html>
+
