--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             </div>
 
             <div class="profile-bio">
-                <h1>James <span class="gold-accent">Winters</span></h1>
+                <h1>michael <span class="gold-accent">oton</span></h1>
                 <span class="badge">CUSTOM CODE · PREMIUM RESULTS</span>
                 
                 <div class="value-text">
@@ -305,7 +305,7 @@
                 </div>
 
                 <div class="why-list">
-                    <div class="why-item"><span class="gold-dot"></span> 8+ YEARS DEV</div>
+                    <div class="why-item"><span class="gold-dot"></span> quality</div>
                     <div class="why-item"><span class="gold-dot"></span> 100% CUSTOM</div>
                     <div class="why-item"><span class="gold-dot"></span> PERFORMANCE FIRST</div>
                     <div class="why-item"><span class="gold-dot"></span> DEDICATED SUPPORT</div>
@@ -384,3 +384,4 @@
     </div>
 </body>
 </html>
+
